--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header{
     cursor: pointer;
 }
 .btn:hover{
-    background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255,255,255, 0.4));
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 main{
     padding: 0 150px 0 200px;
