위로 올라가기 버튼 위치, 동작 수정

--- a/style.css
+++ b/style.css
@@ -241,9 +241,9 @@ label > button{
     top: -130px;
 }
 .hover{
-    position: absolute;
-    right: 15px;
-    top: 100px;
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
 }
 footer{
     display: flex;
